# snapcaster-ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
buildroot/: Config.in  external.desc  external.mk
buildroot/package/snapcaster-ui/: Config.in  snapcaster.mk
src/: CMakeLists.txt  controller.cpp  controller.h  daemon.cpp  daemon.h  json.hpp  queue.h  server-json-rpc.cpp  server-json-rpc.h  signalHandler.h  snapcaster.cpp  ui-handler.cpp  ui-handler.h
src/browseZeroConf/: browseAvahi.cpp  browseAvahi.h  browseBonjour.cpp  browseBonjour.h  browsemDNS.h
src/utils/: file_utils.h
